# Signs-recognition

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Image collection.ipynb  training and detection.ipynb
signs_recognition/: application.py
